# two_tower_model

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: recsysNN_utils.py  two_tower.ipynb  two_tower_attention.py
notebooks/lightning_logs/version_1/: metrics.csv
notebooks/lightning_logs/version_1/checkpoints/: epoch=9-step=14550.ckpt
notebooks/lightning_logs/version_19/: metrics.csv
notebooks/lightning_logs/version_19/checkpoints/: epoch=9-step=14550.ckpt
notebooks/lightning_logs/version_21/: metrics.csv
notebooks/lightning_logs/version_21/checkpoints/: epoch=9-step=14550.ckpt
notebooks/lightning_logs/version_22/: metrics.csv
notebooks/lightning_logs/version_22/checkpoints/: epoch=9-step=14550.ckpt
notebooks/lightning_logs/version_23/: metrics.csv
notebooks/lightning_logs/version_23/checkpoints/: epoch=9-step=14550.ckpt
notebooks/lightning_logs/version_25/: metrics.csv
notebooks/lightning_logs/version_25/checkpoints/: epoch=9-step=14550.ckpt
notebooks/lightning_logs/version_26/: metrics.csv
notebooks/lightning_logs/version_26/checkpoints/: epoch=4-step=7275.ckpt
notebooks/lightning_logs/version_27/: metrics.csv
notebooks/lightning_logs/version_28/: metrics.csv
notebooks/lightning_logs/version_3/: metrics.csv
notebooks/lightning_logs/version_5/: metrics.csv
src/: models.py  modules.py  movie_dataset_utils.py  utils.py
two_tower_model/: __init__.py  dataset.py  features.py  plots.py
two_tower_model/modeling/: predict.py  train.py
(+4 files in other folders)
