[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "two_tower_model"
version = "0.0.1"
description = "Basic Implementation of Two Tower Model for Recommendation System"
authors = [
  { name = "John Torres" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["two_tower_model"]
force_sort_within_sections = true
